src/components/navigation-bar/navigation-bar.css
.navigation-bar {
  --logo-size: 30px;

  display: flex;
  justify-content: space-between;
  padding: var(--space-small) 24px;
  background-color: white;

  .logo {
    height: var(--logo-size);
  }
}

/* Tables */
@media (min-width: 750px) {
  .navigation-bar {
    --logo-size: 48px;

    padding: 24px;
  }
}

